update endpoints for pagination and sorting