@@ -1,18 +1,31 @@
 package com.oblitus.serviceApp.Modules.Controllers;
 
+import com.oblitus.serviceApp.Common.PageInfo;
+import com.oblitus.serviceApp.Common.PageSortUtil;
 import com.oblitus.serviceApp.Common.Response;
 import com.oblitus.serviceApp.Modules.MappersWrapper;
 import com.oblitus.serviceApp.Modules.ModulesWrapper;
 import com.oblitus.serviceApp.Modules.Service.DTOs.*;
+import com.oblitus.serviceApp.Modules.Service.Responses.TicketResponse;
+import com.oblitus.serviceApp.Modules.Service.Ticket;
 import jakarta.annotation.Nonnull;
+import jakarta.annotation.Nullable;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.aspectj.apache.bcel.classfile.Field;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.util.Pair;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -160,13 +173,33 @@ public class ServiceController {
     }
 
     @GetMapping("/comments")
-    public ResponseEntity<Response> getComments(){
+    public ResponseEntity<Response> getComments(@Nullable @RequestParam @Validated String sortField,
+                                                @Nullable @RequestParam @Validated Boolean desc,
+                                                @Nullable @RequestParam @Validated Integer page,
+                                                @Nullable @RequestParam @Validated Integer size){
+        PageSortUtil.preparePaginationAndSorting(sortField,desc,page,size);
+        if(PageSortUtil.pageable.isPaged()){
+            var commentPage = modulesWrapper.serviceModule.getServiceDAO().getCommentService()
+                    .getAll(PageSortUtil.pageable);
+            return ResponseEntity.ok(
+                    Response.builder()
+                            .timestamp(LocalDateTime.now())
+                            .message("All existing comments.")
+                            .data(Map.of("comments",commentPage.stream().map(mappersWrapper.commentMapper).toList()
+                                    )
+                            )
+                            .meta(Map.of("pageInfo",new PageInfo(commentPage)))
+                            .statusCode(HttpStatus.OK.value())
+                            .status(HttpStatus.OK)
+                            .build()
+            );
+        }
         return ResponseEntity.ok(
                 Response.builder()
                         .timestamp(LocalDateTime.now())
                         .message("All existing comments.")
                         .data(Map.of("comments",modulesWrapper.serviceModule.getServiceDAO().getCommentService()
-                                .getAll().stream().map(mappersWrapper.commentMapper).toList()
+                                .getAll(PageSortUtil.sort).stream().map(mappersWrapper.commentMapper).toList()
                                 )
                         )
                         .statusCode(HttpStatus.OK.value())
@@ -240,27 +273,35 @@ public class ServiceController {
         );
     }
 
-    @Deprecated
-    @DeleteMapping("/comment/{id}")
-    public ResponseEntity<Response> deleteCommentByID(@PathVariable @Validated UUID id){
-        return ResponseEntity.ok(
-                Response.builder()
-                        .timestamp(LocalDateTime.now())
-                        .message("Try to drop Comment")
-                        .data(Map.of("result", modulesWrapper.serviceModule.getServiceDAO().getCommentService().delete(new CommentDTO(id))))
-                        .statusCode(HttpStatus.OK.value())
-                        .status(HttpStatus.OK)
-                        .build()
-        );
-    }
-
     @GetMapping("/comments/")
-    public ResponseEntity<Response> getTicketsComments(@Nonnull @RequestParam @Validated UUID ticketId){
+    public ResponseEntity<Response> getTicketsComments(@Nonnull @RequestParam @Validated UUID ticketId,
+                                                       @Nullable @RequestParam @Validated String sortField,
+                                                       @Nullable @RequestParam @Validated Boolean desc,
+                                                       @Nullable @RequestParam @Validated Integer page,
+                                                       @Nullable @RequestParam @Validated Integer size){
+        PageSortUtil.preparePaginationAndSorting(sortField,desc,page,size);
+        if(PageSortUtil.pageable.isPaged()) {
+            var commentPage = modulesWrapper.serviceModule.getServiceDAO().getCommentService()
+                    .getAll(PageSortUtil.pageable);
+            return ResponseEntity.ok(
+                    Response.builder()
+                            .timestamp(LocalDateTime.now())
+                            .message("All ticket's comments.")
+                            .data(Map.of("comments",commentPage.stream().filter(
+                                    commentResponse -> ticketId.equals(commentResponse.getTicket().getUuid())
+                            ).map(mappersWrapper.commentMapper).collect(Collectors.toList())))
+                            .meta(Map.of("pageInfo",new PageInfo(commentPage)))
+                            .statusCode(HttpStatus.OK.value())
+                            .status(HttpStatus.OK)
+                            .build()
+            );
+        }
         return ResponseEntity.ok(
                 Response.builder()
                         .timestamp(LocalDateTime.now())
                         .message("All ticket's comments.")
-                        .data(Map.of("comments",modulesWrapper.serviceModule.getServiceDAO().getCommentService().getAll().stream().filter(
+                        .data(Map.of("comments",modulesWrapper.serviceModule.getServiceDAO().getCommentService()
+                                .getAll(PageSortUtil.sort).stream().filter(
                                 commentResponse -> ticketId.equals(commentResponse.getTicket().getUuid())
                         ).map(mappersWrapper.commentMapper).collect(Collectors.toList())))
                         .statusCode(HttpStatus.OK.value())
@@ -301,15 +342,35 @@ public class ServiceController {
             );
         }
     }
-
     @GetMapping("/tickets")
-    public ResponseEntity<Response> getTickets(){
+    public ResponseEntity<Response> getTicketsPage(@Nullable @RequestParam @Validated String sortField,
+                                                   @Nullable @RequestParam @Validated Boolean desc,
+                                                   @Nullable @RequestParam @Validated Integer page,
+                                                   @Nullable @RequestParam @Validated Integer size){
+        PageSortUtil.preparePaginationAndSorting(sortField,desc,size,page);
+        if(PageSortUtil.pageable.isPaged()){
+            var ticketsPage = modulesWrapper.serviceModule.getServiceDAO().getTicketService()
+                    .getAll(PageSortUtil.pageable);
+            var ticketList = ticketsPage.stream().map(mappersWrapper.ticketMapper).toList();
+            return ResponseEntity.ok(
+                    Response.builder()
+                            .timestamp(LocalDateTime.now())
+                            .message("All existing tickets.")
+                            .data(Map.of("tickets", ticketList))
+                            .meta(Map.of("pageInfo", new PageInfo(ticketsPage)))
+                            .statusCode(HttpStatus.OK.value())
+                            .status(HttpStatus.OK)
+                            .build()
+            );
+        }
+
         return ResponseEntity.ok(
                 Response.builder()
                         .timestamp(LocalDateTime.now())
                         .message("All existing tickets.")
-                        .data(Map.of("tickets",modulesWrapper.serviceModule.getServiceDAO().getTicketService()
-                                .getAll().stream().map(mappersWrapper.ticketMapper).toList()))
+                        .data(Map.of("tickets",
+                                modulesWrapper.serviceModule.getServiceDAO().getTicketService()
+                                        .getAll(PageSortUtil.sort).stream().map(mappersWrapper.ticketMapper).toList()))
                         .statusCode(HttpStatus.OK.value())
                         .status(HttpStatus.OK)
                         .build()
@@ -331,17 +392,39 @@ public class ServiceController {
     }
 
     @GetMapping("/tickets/{userId}")
-    public ResponseEntity<Response> getUserTickets(@PathVariable @Validated UUID userId){
+    public ResponseEntity<Response> getUserTickets(@PathVariable @Validated UUID userId,
+                                                   @Nullable @RequestParam @Validated String sortField,
+                                                   @Nullable @RequestParam @Validated Boolean desc,
+                                                   @Nullable @RequestParam @Validated Integer page,
+                                                   @Nullable @RequestParam @Validated Integer size){
+        PageSortUtil.preparePaginationAndSorting(sortField,desc,size,page);
+        if(PageSortUtil.pageable.isPaged()){
+            var ticketsPage = modulesWrapper.serviceModule.getServiceDAO().getTicketService()
+                    .getAll(PageSortUtil.pageable);
+            return ResponseEntity.ok(
+                    Response.builder()
+                            .timestamp(LocalDateTime.now())
+                            .message("All user tickets.")
+                            .data(Map.of("tickets", ticketsPage.stream().filter(
+                                    ticket -> userId.equals(ticket.getAssigned().getUuid())
+                                            || userId.equals(ticket.getCreator().getUuid())
+                            ).map(mappersWrapper.ticketMapper).toList()))
+                            .meta(Map.of("pageInfo", new PageInfo(ticketsPage)))
+                            .statusCode(HttpStatus.OK.value())
+                            .status(HttpStatus.OK)
+                            .build()
+            );
+        }
         return ResponseEntity.ok(
                 Response.builder()
                         .timestamp(LocalDateTime.now())
                         .message("All user tickets.")
                         .data(Map.of("tickets",modulesWrapper.serviceModule.getServiceDAO().getTicketService()
-                                .getAll().stream().filter(
+                                .getAll(PageSortUtil.sort).stream().filter(
                                 ticket -> userId.equals(ticket.getAssigned().getUuid())
                                         || userId.equals(ticket.getCreator().getUuid())
                         ).map(mappersWrapper.ticketMapper)
-                                .collect(Collectors.toList())))
+                                .toList()))
                         .statusCode(HttpStatus.OK.value())
                         .status(HttpStatus.OK)
                         .build()
@@ -388,21 +471,6 @@ public class ServiceController {
                         .message("Try to drop Ticket")
                         .data(Map.of("result", modulesWrapper.serviceModule.getServiceDAO().getTicketService()
                                 .delete(ticketDTO)))
-                        .statusCode(HttpStatus.OK.value())
-                        .status(HttpStatus.OK)
-                        .build()
-        );
-    }
-
-    @Deprecated
-    @DeleteMapping("/ticket/{id}")
-    public ResponseEntity<Response> deleteTicketById(@PathVariable @Validated UUID id){
-        return ResponseEntity.ok(
-                Response.builder()
-                        .timestamp(LocalDateTime.now())
-                        .message("Try to drop Ticket")
-                        .data(Map.of("result", modulesWrapper.serviceModule.getServiceDAO().getTicketService()
-                                .delete(new TicketDTO(id))))
                         .statusCode(HttpStatus.OK.value())
                         .status(HttpStatus.OK)
                         .build()
